# actix-todo-api

./: .env.example  Cargo.toml  README.md  diesel.toml
migrations/2024-12-16-123606_create_uuid_extension/: down.sql  up.sql
migrations/2024-12-16-123614_create_users/: up.sql
migrations/2024-12-16-123622_create_todos/: down.sql  up.sql
migrations/2024-12-16-123713_create_trigger_updated_at_column/: down.sql  up.sql
src/: main.rs  schema.rs
src/config/: db.rs
src/handlers/: auth.rs  mod.rs  root.rs  todo.rs
src/models/: auth.rs  mod.rs  response.rs  todo.rs
src/repositories/: auth.rs  mod.rs  todo.rs
src/utils/: jwt.rs
